--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <title>I am a title!</title>
     </head>
     <body>
-        The HTML content goes here.
+        this should be the correct content!
     </body>
 </html>
