--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>I am a title!</title>
     </head>
     <body>
+        <h1>I'm a header 1!</h1>
         this should be the correct content!
     </body>
 </html>
