--- a/index.html
+++ b/index.html
@@ -6,5 +6,17 @@
         <h1>I'm a header 1!</h1>
         this should be the correct content!
         <img src="https://octodex.github.com/images/vinyltocat.png">
+        
+        <ol>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Ordered list</li>
+</ol>
+
+<ul>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Unordered list</li>
+</ul>
     </body>
 </html>
