--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <img src="https://octodex.github.com/images/vinyltocat.png">
         
         <ol>
-    <li>This</li>
-    <li>Is an</li>
+    <li><a href="https://github.com">This is a link to GitHub!</a></li>
+    <li><a href="https://www.dynamicweb.com">Dynamicweb!</a></li>
     <li>Ordered list</li>
 </ol>
 
